--- a/style.css
+++ b/style.css
@@ -7,8 +7,11 @@ body {
   font-family: "Roboto", sans-serif;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 .main-container {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
   display: grid;
@@ -25,17 +28,32 @@ body {
   box-shadow: -2px -4px 9px 0px rgb(143, 255, 154);
   z-index: 50;
 }
-.top-left-container {
- padding-top: 15px;
+.top-left-container,
+.bottom-left-container {
+  padding-top: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around ;
+  justify-content: space-around;
   align-items: center;
 }
 .right-container {
-  width: 100%;
+  width: 95%;
   height: 100vh;
-  /* background-color: #000000; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  z-index: 100;
+  background-color: black;
+}
+nav {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: black;
 }
 
 .icon {
@@ -56,34 +74,39 @@ body {
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  background-color: transparent;
-  box-shadow: -2px -4px 9px 0px rgb(143, 255, 154);
+  /* padding: 20px; */
+  position: sticky;
+  top: 0;
+  /* background-color: transparent; */
+  /* box-shadow: -2px -4px 9px 0px rgb(162, 225, 168); */
 }
 
 .logo {
   width: 100px;
 }
 .search-bar {
-  width: 50%;
-  height: 100%;
+  /* width: 50%; */
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   justify-content: space-around;
   border: 1px solid white;
   border-radius: 100px;
+  /* background-color: yellow; */
+  display: flex;
+  flex: 0.8;
 }
 
 .search-bar img {
-  width: 20px;
+  /* width: 20px; */
   filter: invert(1);
-  padding: 0 10px 0 30px;
+  /* padding: 0 10px 0 30px; */
 }
 
 .search-bar input {
   height: 30px;
-  width: 100%;
+  /* width: 100%; */
   padding: 5px;
   border: none;
   border-radius: 5px;
@@ -92,11 +115,11 @@ body {
   font-size: 20px;
   background: none;
   color: white;
-  padding-left: 30px;
+  /* padding-left: 30px; */
 }
 .nav-list {
   display: flex;
-  width: 30%;
+  /* width: 30%; */
   justify-content: space-between;
   align-items: center;
   padding: 20px;
@@ -106,6 +129,13 @@ body {
   text-decoration: none;
   color: white;
   cursor: pointer;
+  padding-right: 55px;
+}
+.nav-list a:hover {
+  color: rgb(143, 255, 154);
+  border-bottom: 2px solid rgb(143, 255, 154);
+  padding-bottom: 5px;
+  transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .more-options img {
@@ -113,4 +143,557 @@ body {
   filter: invert(1);
 }
 
+.video-container {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  position: relative;
+}
 
+.video-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.8;
+  padding-bottom: 1%;
+}
+.video-container .text-on-videos {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  color: white;
+  font-weight: 100;
+  text-transform: uppercase;
+  text-align: center;
+  z-index: 50;
+}
+.content {
+  margin: auto;
+}
+p {
+  font-size: 25px;
+  overflow: hidden;
+  position: relative;
+  color: white;
+}
+
+.type-container {
+  display: flex;
+  justify-content: space-between;
+  background-color: black;
+  position: relative;
+  padding: 20px 20px;
+  border-bottom: 2px solid rgb(143, 255, 154);
+}
+.type-options {
+  width: 30%;
+}
+
+.type-container .type-options ul {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.type-container .type-options ul li {
+  cursor: pointer;
+  color: white;
+  /* padding: 10px; */
+  border-radius: 5px;
+  transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+/* remove underline from li tag */
+.type-container .type-options ul li a {
+  text-decoration: none;
+  color: white;
+}
+.type-container .type-options ul li a:hover {
+  color: rgb(143, 255, 154);
+  border-bottom: 2px solid rgb(143, 255, 154);
+  padding-bottom: 5px;
+  transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.type-container .type-options ul li:hover {
+  color: black;
+  transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.container {
+  width: 100%;
+  height: 50%;
+  /* background-color: rgb(233, 36, 36); */
+  position: relative;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.search-label {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  position: relative;
+  border: 1px solid transparent;
+  border-radius: 12px;
+  overflow: hidden;
+  background: #151515;
+  padding: 9px;
+  cursor: text;
+  width: 40%;
+}
+
+.search-label:hover {
+  border-color: gray;
+}
+
+.search-label:focus-within {
+  background: #464646;
+  border-color: gray;
+}
+
+.search-label input {
+  outline: none;
+  width: 100%;
+  border: none;
+  background: none;
+  color: rgb(162, 162, 162);
+}
+
+.search-label input:focus + .slash-icon,
+.search-label input:valid + .slash-icon {
+  display: none;
+}
+
+.search-label input:valid ~ .search-icon {
+  display: block;
+}
+
+.search-label input:valid {
+  width: calc(100% - 22px);
+  transform: translateX(20px);
+}
+
+.search-label svg,
+.slash-icon {
+  position: absolute;
+  color: #7e7e7e;
+}
+
+.search-icon {
+  display: none;
+  width: 12px;
+  height: auto;
+}
+
+.slash-icon {
+  right: 7px;
+  border: 1px solid #393838;
+  background: linear-gradient(-225deg, #343434, #6d6d6d);
+  border-radius: 3px;
+  text-align: center;
+  box-shadow: inset 0 -2px 0 0 #3f3f3f, inset 0 0 1px 1px rgb(94, 93, 93),
+    0 1px 2px 1px rgba(28, 28, 29, 0.4);
+  cursor: pointer;
+  font-size: 12px;
+  width: 15px;
+}
+
+.slash-icon:active {
+  box-shadow: inset 0 1px 0 0 #3f3f3f, inset 0 0 1px 1px rgb(94, 93, 93),
+    0 1px 2px 0 rgba(28, 28, 29, 0.4);
+  text-shadow: 0 1px 0 #7e7e7e;
+  color: transparent;
+}
+
+.filter-button {
+  --border-color: linear-gradient(-45deg, #ffae00, #03aa46, #00fffb);
+  --border-width: 0.125em;
+  --curve-size: 0.5em;
+  --blur: 30px;
+  --bg: #080312;
+  --color: #afffff;
+  color: var(--color);
+  /* use position: relative; so that BG is only for .filter-button */
+  position: relative;
+  isolation: isolate;
+  display: inline-grid;
+  place-content: center;
+  padding: 0.5em 1.5em;
+  font-size: 17px;
+  border: 0;
+  text-transform: uppercase;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.6);
+  clip-path: polygon(
+    /* Top-left */ 0% var(--curve-size),
+    var(--curve-size) 0,
+    /* top-right */ 100% 0,
+    100% calc(100% - var(--curve-size)),
+    /* bottom-right 1 */ calc(100% - var(--curve-size)) 100%,
+    /* bottom-right 2 */ 0 100%
+  );
+  transition: color 250ms;
+}
+
+.filter-button::after,
+.filter-button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+}
+
+.filter-button::before {
+  background: var(--border-color);
+  background-size: 300% 300%;
+  animation: move-bg7234 5s ease infinite;
+  z-index: -2;
+}
+
+@keyframes move-bg7234 {
+  0% {
+    background-position: 31% 0%;
+  }
+
+  50% {
+    background-position: 70% 100%;
+  }
+
+  100% {
+    background-position: 31% 0%;
+  }
+}
+
+.filter-button::after {
+  background: var(--bg);
+  z-index: -1;
+  clip-path: polygon(
+    /* Top-left */ var(--border-width)
+      calc(var(--curve-size) + var(--border-width) * 0.5),
+    calc(var(--curve-size) + var(--border-width) * 0.5) var(--border-width),
+    /* top-right */ calc(100% - var(--border-width)) var(--border-width),
+    calc(100% - var(--border-width))
+      calc(100% - calc(var(--curve-size) + var(--border-width) * 0.5)),
+    /* bottom-right 1 */
+      calc(100% - calc(var(--curve-size) + var(--border-width) * 0.5))
+      calc(100% - var(--border-width)),
+    /* bottom-right 2 */ var(--border-width) calc(100% - var(--border-width))
+  );
+  transition: clip-path 500ms;
+}
+
+.filter-button:where(:hover, :focus)::after {
+  clip-path: polygon(
+    /* Top-left */ calc(100% - var(--border-width))
+      calc(100% - calc(var(--curve-size) + var(--border-width) * 0.5)),
+    calc(100% - var(--border-width)) var(--border-width),
+    /* top-right */ calc(100% - var(--border-width)) var(--border-width),
+    calc(100% - var(--border-width))
+      calc(100% - calc(var(--curve-size) + var(--border-width) * 0.5)),
+    /* bottom-right 1 */
+      calc(100% - calc(var(--curve-size) + var(--border-width) * 0.5))
+      calc(100% - var(--border-width)),
+    /* bottom-right 2 */
+      calc(100% - calc(var(--curve-size) + var(--border-width) * 0.5))
+      calc(100% - var(--border-width))
+  );
+  transition: 200ms;
+}
+
+.filter-button:where(:hover, :focus) {
+  color: #fff;
+}
+
+.container .box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+
+.container .box .dream {
+  display: flex;
+  flex-direction: column;
+  width: 32.5%;
+}
+.container .box .dream img {
+  width: 100%;
+  padding-bottom: 15px;
+  max-height: 500px;
+  border-radius: 5px;
+  cursor: pointer;
+  /* cover */
+  object-fit: fillx;
+}
+
+.image-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 10px;
+  overflow: hidden;
+  /* height: 100%; */
+  position: relative;
+  width: 100%;
+}
+.image-div p {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+}
+html,
+body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.load-more-container {
+  text-align: center;
+  margin-top: 25px;
+}
+
+.load-more-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 769px) {
+  .container .box {
+    flex-direction: column;
+    padding-top: 10px;
+  }
+  .container .box .dream {
+    width: 100%;
+  }
+}
+
+footer {
+  background-color: #1f1f1f;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.left {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-left: 100px;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  height: 40px;
+  margin-right: 10px;
+}
+
+.social-icons {
+  display: flex;
+}
+
+.social-icons img {
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
+  cursor: pointer;
+  /* filter: invert(1); */
+}
+
+.right {
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.section {
+  margin-right: 30px;
+}
+
+.section h3 {
+  margin-bottom: 10px;
+}
+
+.section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.section ul li {
+  margin-bottom: 5px;
+}
+
+.section ul li a {
+  color: #555;
+  text-decoration: none;
+}
+
+
+/* Explore page css  */
+.explore-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  max-width: 1200px;
+  grid-template-rows: repeat(2, 1fr);
+  justify-content: space-between;
+  align-items: center;
+}
+/* .explore-box {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 10px;
+  max-width: 300px;
+  max-height: 300px;
+  margin: 0 auto;
+  border: 3px solid wheat;
+  overflow: hidden;
+  border-radius: 30px;
+}
+
+.explore-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
+.explore-box {
+  position: relative;
+  display: inline-block;
+  max-width: 400px;
+  margin: 20px;
+  overflow: hidden;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.explore-box .title {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  padding: 10px;
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  width: 100%;
+  z-index: 50;
+}
+
+.explore-box .main-image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.explore-box .hover-images {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.explore-box:hover .hover-images {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.explore-box .hover-images img {
+  flex: 0 0 50%;
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+
+}
+
+
+.top-container {
+  display: flex;
+  justify-content: center;
+}
+
+.top-box {
+  width: 200px; /* Adjust the width as needed */
+  height: 100px; /* Adjust the height as needed */
+  background-color: lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+  border-radius: 5px;
+}
+.top-box img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+ 
+  cursor: pointer;
+}
+
+.top-title {
+  text-align: center;
+  position: absolute;
+}
+
+
+
+
+main {
+  padding: 20px;
+}
+
+section {
+  margin-bottom: 20px;
+}
+
+section h2 {
+  color: #333;
+}
+
+.owner {
+  display: flex;
+  align-items: center;
+}
+
+.owner img {
+  width: 150px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.owner-info h3 {
+  margin: 0;
+}
+
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact-info div {
+  text-align: center;
+}
