--- a/style.css
+++ b/style.css
@@ -556,7 +556,7 @@ footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
-  max-width: 1200px;
+  /* max-width: 1200px; */
   grid-template-rows: repeat(2, 1fr);
   justify-content: space-between;
   align-items: center;
