--- a/style.css
+++ b/style.css
@@ -35,15 +35,7 @@ body {
 }
 
 
-@media (max-width: 768px) {
-  .menu {
-    display: flex;
-  }
 
-  .nav-list {
-    display: none;
-  }
-}
 
 .top-left-container,
 .bottom-left-container {
@@ -69,7 +61,7 @@ body {
   overflow-y: scroll;
   overflow-x: hidden;
   z-index: 100;
-  background-color: black;
+ 
 }
 
 nav {
@@ -274,6 +266,7 @@ p {
   position: relative;
   padding: 20px;
   box-sizing: border-box;
+  
 }
 
 .search-label {
@@ -327,7 +320,7 @@ p {
   color: #7e7e7e;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1025px) {
   .search-label {
     display: none;
   }
@@ -335,6 +328,10 @@ p {
   .nav-list {
     display: none;
     flex: 1;
+  }
+
+  .menu {
+    display: flex;
   }
 }
 
@@ -607,6 +604,42 @@ footer {
   padding: 20px;
 }
 
+.footer-bottom {
+  margin-top: 20px;
+}
+
+.footer-bottom {
+  margin-top: 20px;
+}
+
+.footer-bottom p {
+  margin: 0;
+  color: #888;
+}
+
+.footer-bottom p a {
+  color: #888;
+  text-decoration: none;
+}
+
+.footer-bottom p a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom p {
+  margin: 0;
+  color: #888;
+}
+
+.footer-bottom p a {
+  color: #888;
+  text-decoration: none;
+}
+
+.footer-bottom p a:hover {
+  text-decoration: underline;
+}
+
 /* Left Side Styles */
 .left {
   display: flex;
@@ -807,11 +840,13 @@ footer {
   padding: 10px;
 
 }
+
 @media only screen and (max-width: 769px) {
   .top-box {
     width: 100px;
     height: 100px;
   }
+
   .top-title {
     font-size: 12px;
     bottom: auto;
@@ -872,6 +907,7 @@ section {
 section h2 {
   color: #333;
 }
+
 h2 {
   color: greenyellow;
 }
@@ -1130,4 +1166,267 @@ img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+
+
+
+.more-options {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 150px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
+.more-options:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu li {
+  padding: 8px 12px;
+}
+
+.dropdown-menu li:hover {
+  background-color: #ddd;
+}
+
+.dropdown-menu li a {
+  color: #333;
+  text-decoration: none;
+}
+
+
+
+/* challenge page */
+
+
+.challenge-section {
+  padding: 40px 0;
+  text-align: center;
+}
+
+.container-1 {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.challenges {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.challenge-card {
+  background-color: #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.image-container {
+  width: 100%;
+  height: 200px;
+  /* Set the desired height */
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.challenge-details {
+  padding: 20px;
+}
+
+.challenge-details h2 {
+  margin-bottom: 10px;
+}
+
+.challenge-details p {
+  color: #888;
+  margin-bottom: 20px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 3px;
+}
+
+.btn:hover {
+  background-color: #555;
+  color: #fff;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.sponser-challenge {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  text-align: left;
+  width: 80%;
+  margin: auto;
+  justify-content: space-around;
+  border: 2px solid #333;
+  padding: 10px;
+}
+
+@media only screen and (max-width: 769px) {
+  .sponser-challenge {
+    width: 100%;
+    flex-direction: column;
+  }
+}
+
+.sponser-text h2 {
+  color: white
+}
+
+
+/* challenge page end */
+
+/* Blog page */
+.blog-title-subtitle p {
+  color: gray;
+  font-size: 15px;
+  margin-top: -13px;
+}
+
+.blog-section {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+}
+
+.blog-post {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  justify-content: space-between;
+}
+
+@media (max-width: 1025px) {
+  .blog-post {
+    flex-direction: column;
+  }
+
+  .blog-post:nth-child(odd) {
+    flex-direction: column-reverse;
+  }
+}
+
+
+
+.blog-image {
+  width: 60%;
+  border-radius: 30px;
+  overflow: hidden;
+}
+
+.blog-image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 1025px) {
+  .blog-image {
+    width: 90%;
+    border-radius: 15px;
+  }
+}
+
+
+
+.blog-content {
+  flex: 1;
+  margin: 0px 20px;
+  text-align: left;
+}
+
+.blog-content h2 {
+  font-size: 20px;
+  margin: 0 0 10px;
+}
+
+.blog-content p {
+  margin: 0 0 10px;
+  font-size: 16px;
+}
+
+.blog-content a {
+  text-decoration: none;
+  color: blue;
+}
+
+.blog-content a:hover {
+  text-decoration: underline;
+}
+
+
+
+.blog-post:nth-child(even) .blog-content {
+  /* margin-left: 0; */
+  margin-right: 20px;
+}
+
+.new-story {
+  text-align: center;
+}
+
+@media screen and (max-width: 1025px) {
+  .blog-content p {
+    font-size: 10px;
+  }
+}
+
+
+.popular-story {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 20px;
+  width: 80%;
+  margin: auto;
+  margin-top: 40px;
+}
+
+.story {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.ps-image{
+  width: 210px;
+  height: 250px;
+  overflow: hidden;
+  align-items: center;
+}
+
+.story-title {
+  margin-top: 10px;
+  font-size: 18px;
 }
